# chatShere

./: .gitignore  BUILD_SPEED_SOLUTIONS.md  DEPLOYMENT.md  PERFORMANCE_OPTIMIZATION.md  README.md  docker-compose.db-only.yml  docker-compose.dev.yml  docker-compose.monitoring.yml  docker-compose.prod.yml  docker-compose.test.yml  docker-compose.ultra-fast.yml  start.sh
backend/: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  Dockerfile.dev  Dockerfile.fast  README.md  config.py  main.py  pyproject.toml  run.py  sources.list  test_client.py
backend/.github/workflows/: deploy-staging.yml
backend/deployment/docker/: Dockerfile  Dockerfile.prod  Dockerfile.staging  docker-compose.prod.yml  docker-compose.staging.yml  docker-compose.yml
backend/deployment/nginx/: prod.conf  staging.conf
backend/docs/: DEPLOYMENT.md  DIRECTORY_STRUCTURE.md  PRODUCTION_DEPLOYMENT.md  README.md  test_guide.md
backend/scripts/: deploy.py  init-db.sql  manual-deploy.sh  server-setup.sh  setup.py  switch_env.sh
backend/src/: __init__.py
backend/src/chatSphere/: __init__.py
backend/src/chatSphere/api/routes/: auth.py
backend/src/chatSphere/core/: auth.py  cache.py  config.py  database.py  logging_config.py  middleware.py  models.py  websocket_manager.py
backend/src/chatSphere/services/: conversation_service.py  responses.py  services.py
backend/tests/: test_client.py
docs/: GITHUB_SECRETS_SETUP.md  SIMPLE_DEPLOYMENT.md
frontend/: .dockerignore  .env.development  .env.example  .env.production  .env.testing  Dockerfile  README.md  package.json  (+1 more)
(+36 files in other folders)
